--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "auto-reveal": "^0.3.0",
-    "auto-reveal-theme-mainmatter": "^0.1.2"
+    "auto-reveal-theme-mainmatter": "^0.1.2",
+    "js-confetti": "^0.12.0"
   },
   "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
   "devDependencies": {
     "layer-gen": "^1.0.1",
     "layer-gen-blueprint": "^1.0.1"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "auto-reveal": "patches/auto-reveal.patch"
+    }
   }
 }
